--- a/nginx-conf.d/cac.conf
+++ b/nginx-conf.d/cac.conf
@@ -1,11 +1,11 @@
 server {
     listen 8443 ssl;
     server_name localhost;
-    ssl_certificate     /ca/ca-ex.pem;
-    ssl_certificate_key /ca/ca-ex.key;
+    ssl_certificate     /tmp/ca/ca-ex.pem;
+    ssl_certificate_key /tmp/ca/ca-ex.key;
     ssl_verify_client on;
     ssl_verify_depth 3;
-    ssl_client_certificate /ca/ca-ex.pem;
+    ssl_client_certificate /tmp/ca/ca-ex.pem;
 
     location / {
         root   /usr/share/nginx/html;
